Convert showcase items to flexbox to prevent overflow issues

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,8 +1,6 @@
 @import "./_reset";
 
 @mixin link {
-	display: inline-block;
-
 	text-decoration: none;
 	color: inherit;
 }
@@ -40,6 +38,9 @@
 .showcase-item__link {
 	position: relative;
 	z-index: 0;
+
+	display: flex;
+	align-items: center;
 
 	padding: 0.5em 0;
 	width: 100%;
@@ -115,6 +116,8 @@
 .contact__link {
 	position: relative;
 
+	display: inline-block;
+
 	@include link;
 
 	&::before {
@@ -128,7 +131,7 @@
 
 		width: 0;
 		height: 3px;
-		background-color: #333;
+		background-color: black;
 	}
 
 	&:hover {
